kubernetes/templates/moonraker/service-moonraker.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: "${PRINTER_NAME}-moonraker"
subsets:
  - addresses:
      - ip: "${PRINTER_IP}"
    ports:
      - port: 7125
        protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: "${PRINTER_NAME}-moonraker"
spec:
  type: ClusterIP
  ports:
    - port: 7125
      targetPort: 7125
      protocol: TCP
