kubernetes/templates/moonraker/service-webcam.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: "${PRINTER_NAME}-webcam"
subsets:
  - addresses:
      - ip: "${PRINTER_IP}"
    ports:
      - port: 8080
        protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: "${PRINTER_NAME}-webcam"
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
