kubernetes/templates/moonraker/ingress-moonraker.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "${PRINTER_NAME}-moonraker"
spec:
  ingressClassName: internal
  rules:
    - host: &host "printer-${PRINTER_NAME}.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: "${PRINTER_NAME}-moonraker"
                port:
                  number: 7125
  tls:
    - hosts:
        - *host
