kubernetes/templates/moonraker/ingress-webcam.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "${PRINTER_NAME}-webcam"
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: internal
  rules:
    - host: &host "printer-${PRINTER_NAME}.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /webcam(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: "${PRINTER_NAME}-webcam"
                port:
                  number: 8080
  tls:
    - hosts:
        - *host
